--- a/index.html
+++ b/index.html
@@ -149,6 +149,11 @@
 					</div>
 				</div>
 			</div>
+			<div class="advantages">
+				<div class="container advantages-wrapper">
+					
+				</div>
+			</div>
 			
 		</main>
 
