brand and catalog

--- a/catalog.html
+++ b/catalog.html
@@ -21,9 +21,12 @@
 		      <path d="m18.348 6.41594.2486-.02555-.0001-.00089-.2485.02644Zm1.6449 16.01116-.2487.0256.0011.0108.002.0107.2456-.0471ZM14.8114 5.95766h-.25v.25h.25v-.25Zm-9.54054 0v.25h.25v-.25h-.25Zm-3.61881.45828-.2486-.02644-.00009.00089.24869.02555ZM.0071315 22.4271l.2455415.0471.00204-.0107.00111-.0108-.2486915-.0256Zm.1096615.401-.2030897.1458.2030897-.1458ZM6 6h-.25v.25H6V6Zm8 0v.25h.25V6H14ZM1 22l-.248699-.0255-.028219.2755H1V22ZM2.53659 7v-.25h-.2257l-.023.22452L2.53659 7ZM19 22v.25h.2769l-.0282-.2755L19 22ZM17.4634 7l.2487-.02548-.023-.22452h-.2257V7Zm-2.7988 0v-.25h-.25V7h.25Zm0 .94646h-.25v.17475l.1641.06003.0859-.23478Zm-.9329 0 .0859.23478.1641-.06003v-.17475h-.25Zm0-.94646h.25v-.25h-.25V7ZM6.15854 7v-.25h-.25V7h.25Zm0 .94646h-.25v.17475l.1641.06003.0859-.23478Zm-.93293 0 .08589.23478.16411-.06003v-.17475h-.25Zm0-.94646h.25v-.25h-.25V7Zm12.87369-.55851 1.6449 16.01121.4974-.0511-1.645-16.01121-.4973.0511Zm-.2448-.23383c.1128 0 .2303.09794.2449.23472l.4971-.05288c-.0402-.37879-.3614-.68184-.742-.68184v.5Zm-3.0431 0h3.0431v-.5h-3.0431v.5Zm-.25-1.22385v.97385h.5v-.97385h-.5ZM10.0411.25c2.4836 0 4.5203 2.11176 4.5203 4.73381h.5c0-2.87733-2.2401-5.23381-5.0203-5.23381v.5ZM5.52086 4.98381C5.52086 2.36176 7.55753.25 10.0411.25v-.5c-2.78012 0-5.02024 2.35648-5.02024 5.23381h.5Zm0 .97385v-.97385h-.5v.97385h.5Zm-3.37534.25h3.12534v-.5H2.14552v.5Zm-.24487.23472c.01454-.13678.13203-.23472.24487-.23472v-.5c-.38063 0-.70179.30305-.74207.68184l.4972.05288ZM.255823 22.4527 1.90074 6.44149l-.49738-.0511L-.24156 22.4016l.497383.0511Zm.064059.2297c-.059929-.0835-.076963-.1573-.067209-.2082l-.491083-.0941c-.045077.2355.047551.4482.1521133.5938l.4061787-.2915Zm.153309.0676c-.071861 0-.126295-.03-.153309-.0676l-.4061787.2915c.1374778.1915.3571967.2761.5594877.2761v-.5Zm19.053609 0H.473191v.5H19.5268v-.5Zm.1533-.0676c-.027.0376-.0814.0676-.1533.0676v.5c.2023 0 .422-.0846.5595-.2761l-.4062-.2915Zm.0672-.2082c.0098.0509-.0073.1247-.0672.2082l.4062.2915c.1046-.1456.1972-.3583.1521-.5938l-.4911.0941ZM15.25 9.5c0-.41932-.3307-.75-.75-.75v.5c.1432 0 .25.10682.25.25h.5Zm-.75.75c.4193 0 .75-.33068.75-.75h-.5c0 .14318-.1068.25-.25.25v.5Zm-.75-.75c0 .41932.3307.75.75.75v-.5c-.1432 0-.25-.10682-.25-.25h-.5Zm.75-.75c-.4193 0-.75.33068-.75.75h.5c0-.14318.1068-.25.25-.25v-.5ZM6.25 5.01163C6.25 2.93971 7.93586 1.25 10 1.25v-.5c-2.34165 0-4.25 1.91494-4.25 4.26163h.5ZM6.25 6v-.98837h-.5V6h.5ZM14 5.75H6v.5h8v-.5Zm-.25-.73837V6h.5v-.98837h-.5ZM10 1.25c2.0641 0 3.75 1.68971 3.75 3.76163h.5C14.25 2.66494 12.3417.75 10 .75v.5ZM6.25 9.5c0-.41932-.33068-.75-.75-.75v.5c.14318 0 .25.10682.25.25h.5Zm-.75.75c.41932 0 .75-.33068.75-.75h-.5c0 .14318-.10682.25-.25.25v.5Zm-.75-.75c0 .41932.33068.75.75.75v-.5c-.14318 0-.25-.10682-.25-.25h-.5Zm.75-.75c-.41932 0-.75.33068-.75.75h.5c0-.14318.10682-.25.25-.25v-.5ZM1.2487 22.0255 2.78528 7.02548l-.49739-.05096L.751301 21.9745l.497399.051ZM19 21.75H1v.5h18v-.5ZM17.2147 7.02548l1.5366 15.00002.4974-.051-1.5366-14.99998-.4974.05096ZM14.6646 7.25h2.7988v-.5h-2.7988v.5Zm.25.69646V7h-.5v.94646h.5Zm.933 1.37668c0-.73217-.4463-1.37336-1.0971-1.61146l-.1718.46956c.4468.16344.7689.61211.7689 1.1419h.5Zm-1.6494 1.71276c.9166 0 1.6494-.7822 1.6494-1.71276h-.5c0 .67553-.5295 1.21276-1.1494 1.21276v.5Zm-1.6494-1.71276c0 .93056.7327 1.71276 1.6494 1.71276v-.5c-.6199 0-1.1494-.53723-1.1494-1.21276h-.5Zm1.097-1.61146c-.6508.2381-1.097.87929-1.097 1.61146h.5c0-.52979.3221-.97846.7688-1.1419l-.1718-.46956ZM13.4817 7v.94646h.5V7h-.5Zm-7.32316.25h7.57316v-.5H6.15854v.5Zm.25.69646V7h-.5v.94646h.5Zm.93292 1.37668c0-.73217-.44621-1.37336-1.09703-1.61146l-.17179.46956c.44674.16344.76882.61211.76882 1.1419h.5ZM5.69207 11.0359c.91668 0 1.64939-.7822 1.64939-1.71276h-.5c0 .67553-.52948 1.21276-1.14939 1.21276v.5ZM4.04268 9.32314c0 .93056.73272 1.71276 1.64939 1.71276v-.5c-.61991 0-1.14939-.53723-1.14939-1.21276h-.5Zm1.09704-1.61146c-.65083.2381-1.09704.87929-1.09704 1.61146h.5c0-.52979.32208-.97846.76882-1.1419l-.17178-.46956ZM4.97561 7v.94646h.5V7h-.5Zm-2.43902.25h2.68902v-.5H2.53659v.5Z"></path>
 	    </g>
 	  </symbol>
-		<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 9 17" id="arrow">
-			<path d="M1 1L9 8.506L1 16" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
-		</symbol>
+		<symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" id="plus">
+	    <path id="+" fill-rule="evenodd" clip-rule="evenodd" d="M9.14857 19.991V11.6097H0.881104V9.3722H9.14857V0.990967H11.6516V9.3722H19.919V11.6097H11.6516V19.991H9.14857Z" fill="currentColor"></path>
+	  </symbol>
+	  <symbol fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 11 7" id="arrow-down">
+	    <path d="M10.375 1L5.68375 6L1 1" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"></path>
+	  </symbol>
 	</svg>
 		<header class="header">
 			<div class="header-top desktop">
@@ -318,199 +321,233 @@
 		</header>
 
 		<main class="catalog-main">
-			<div class="container">
-				<div class="catalog">
+			<div class="container catalog">
 
-					<div class="breadcrumbs">
-						<ul class="breadcrumbs-list">
-							<li class="breadcrumbs-item">
-								<a href="">Главная</a>
-							</li>
-							<li class="breadcrumbs-item">
-								<p>Кальяны</p>
-							</li>
-						</ul>
-						<h1 class="page-name">Кальяны</h1>
+				<div class="breadcrumbs">
+					<ul class="breadcrumbs-list">
+						<li class="breadcrumbs-item">
+							<a href="">Главная</a>
+						</li>
+						<li class="breadcrumbs-item">
+							<p>Кальяны</p>
+						</li>
+					</ul>
+					<h1 class="page-name">Кальяны</h1>
+				</div>
+
+				<div class="brands-list">
+					<div class="brand">
+							<a href="">
+								<img src="./assets/brand-1.svg" alt="">
+							</a>
 					</div>
-
-					<div class="brands-list">
-						<div class="brand">
-							<img src="./assets/brand-1.svg" alt="">
-						</div>
-						<div class="brand">
+					<div class="brand">
+						<a href="">
 							<img src="./assets/brand-2.png" alt="">
-						</div>
-						<div class="brand">
+						</a>
+					</div>
+					<div class="brand">
+						<a href="">
 							<img src="./assets/brand-3.png" alt="">
-						</div>
-						<div class="brand">
+						</a>
+					</div>
+					<div class="brand">
+						<a href="">
 							<img src="./assets/brand-4.png" alt="">
-						</div>
-						<div class="brand">
+						</a>
+					</div>
+					<div class="brand">
+						<a href="">
 							<img src="./assets/brand-5.png" alt="">
-						</div>
-						<div class="brand">
+						</a>
+					</div>
+					<div class="brand">
+						<a href="">
 							<img src="./assets/brand-6.png" alt="">
-						</div>
-						<div class="brand">
+						</a>
+					</div>
+					<div class="brand">
+						<a href="">
 							<img src="./assets/brand-7.png" alt="">
-						</div>
-						<div class="brand">
+						</a>
+					</div>
+					<div class="brand">
+						<a href="">
 							<img src="./assets/brand-8.png" alt="">
-						</div>
-
-						<div class="filter">
-							<p class="filter-text">Сортировать:</p>
-							<a href="" class="filter-link">По цене</a>
-						</div>
-
-						<div class="products">
-
-							<div class="product discount">
-								<div class="product-image">
-									<img src="./assets/hookah-1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-new">5 990 ₽</h5>
-										<strike class="product-price-old">8 990 ₽</strike>
-									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-							<div class="product bamboo">
-								<div class="product-image">
-									<img src="./assets/hookah-2.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
-									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-							<div class="product discount">
-								<div class="product-image">
-									<img src="./assets/hookah-1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-new">5 990 ₽</h5>
-										<strike class="product-price-old">8 990 ₽</strike>
-									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-							<div class="product bamboo">
-								<div class="product-image">
-									<img src="./assets/hookah-2.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
-									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-							<div class="product">
-								<div class="product-image">
-									<img src="./assets/hookah-1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
-									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-							<div class="product discount">
-								<div class="product-image">
-									<img src="./assets/hookah-1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-new">5 990 ₽</h5>
-										<strike class="product-price-old">8 990 ₽</strike>
-									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-							<div class="product bamboo">
-								<div class="product-image">
-									<img src="./assets/hookah-2.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-current">5 990 ₽</h5>
-									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-							<div class="product discount">
-								<div class="product-image">
-									<img src="./assets/hookah-1.png" alt="">
-								</div>
-								<div class="product-info">
-									<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
-									<div class="product-price">
-										<h5 class="product-price-new">5 990 ₽</h5>
-										<strike class="product-price-old">8 990 ₽</strike>
-									</div>
-									<a href="" class="button">
-										<svg class="icon">
-										  <use xlink:href="#button-cart"></use>
-										</svg>
-										В корзину
-									</a>
-								</div>
-							</div>
-
-						</div>
+						</a>
 					</div>
 				</div>
+
+				<div class="filter">
+					<p class="filter-text">Сортировать:</p>
+					<a href="" class="filter-link">
+						По цене
+						<svg width="9" height="9" class="icon">
+						  <use xlink:href="#arrow-down"></use>
+						</svg>
+					</a>
+				</div>
+
+				<div class="products-wrapper">
+					<div class="products">
+
+						<div class="product discount">
+							<div class="product-image">
+								<img src="./assets/hookah-1.png" alt="">
+							</div>
+							<div class="product-info">
+								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+								<div class="product-price">
+									<h5 class="product-price-new">5 990 ₽</h5>
+									<strike class="product-price-old">8 990 ₽</strike>
+								</div>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+						</div>
+						<div class="product bamboo">
+							<div class="product-image">
+								<img src="./assets/hookah-2.png" alt="">
+							</div>
+							<div class="product-info">
+								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+								<div class="product-price">
+									<h5 class="product-price-current">5 990 ₽</h5>
+								</div>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+						</div>
+						<div class="product discount">
+							<div class="product-image">
+								<img src="./assets/hookah-1.png" alt="">
+							</div>
+							<div class="product-info">
+								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+								<div class="product-price">
+									<h5 class="product-price-new">5 990 ₽</h5>
+									<strike class="product-price-old">8 990 ₽</strike>
+								</div>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+						</div>
+						<div class="product bamboo">
+							<div class="product-image">
+								<img src="./assets/hookah-2.png" alt="">
+							</div>
+							<div class="product-info">
+								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+								<div class="product-price">
+									<h5 class="product-price-current">5 990 ₽</h5>
+								</div>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+						</div>
+						<div class="product">
+							<div class="product-image">
+								<img src="./assets/hookah-1.png" alt="">
+							</div>
+							<div class="product-info">
+								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+								<div class="product-price">
+									<h5 class="product-price-current">5 990 ₽</h5>
+								</div>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+						</div>
+						<div class="product discount">
+							<div class="product-image">
+								<img src="./assets/hookah-1.png" alt="">
+							</div>
+							<div class="product-info">
+								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+								<div class="product-price">
+									<h5 class="product-price-new">5 990 ₽</h5>
+									<strike class="product-price-old">8 990 ₽</strike>
+								</div>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+						</div>
+						<div class="product bamboo">
+							<div class="product-image">
+								<img src="./assets/hookah-2.png" alt="">
+							</div>
+							<div class="product-info">
+								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+								<div class="product-price">
+									<h5 class="product-price-current">5 990 ₽</h5>
+								</div>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+						</div>
+						<div class="product discount">
+							<div class="product-image">
+								<img src="./assets/hookah-1.png" alt="">
+							</div>
+							<div class="product-info">
+								<h6 class="product-title">Кальян «Bamboo Hookah» (серебро)</h6>
+								<div class="product-price">
+									<h5 class="product-price-new">5 990 ₽</h5>
+									<strike class="product-price-old">8 990 ₽</strike>
+								</div>
+								<a href="" class="button">
+									<svg class="icon">
+									  <use xlink:href="#button-cart"></use>
+									</svg>
+									В корзину
+								</a>
+							</div>
+						</div>
+
+					</div>
+					<button class="button secondary more">
+						Показать еще
+						<svg width="19" height="19" class="icon">
+						  <use xlink:href="#plus"></use>
+						</svg>
+					</button>
+				</div>
+				<div class="full-description-block">
+					<h3>Кальяны в нашем магазине</h3>
+					<p>Вы задаетесь вопросом — где можно купить кальяны, чаши, колбы и другие аксессуары? Ответ достаточно прост — посетите магазин кальянов — Bamboo Hookah. Адрес наших отделов в Казани — ул. Декабристов, 113 (вход с ул. Лушникова), часы работы — 12:00-19:00.</p>
+					<p>Вы также можете позвонить нам по телефону +7(965)404-19-78 и мы ответим на интересующие вас вопросы. А наши продавцы-консультанты в магазине расскажут подробно о любом, интересующем вас товаре, помогут определиться вам с выбором.</p>
+					<p>Достаточно лишь раз посетить Bamboo Hookag, чтобы понять: широта и уникальность нашего ассортимента, а также выгодные цены не оставят вас равнодушными. Поэтому не стоит думать и гадать — у нас вы сможете купить кальяны в Казани или сделать заказ через наш интернет-магазин по самым лучшим ценам в городе. Bamboo Hookah — прими правильное решение, чтобы потом не жалеть!</p>
+				</div>
 			</div>
+
 		</main>
 
 		<footer class="footer">
